--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <title>Random Quotes</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://use.fontawesome.com/9f70ebcc62.js"></script>
   </head>
 
   <body>
     <header>
       <h1>Random Quotes</h1>
-      <button id="load-quote" class="load-quote">Show another quote</button>
+      <button id="load-quote" class="load-quote"><i class="fa fa-refresh fa-2x" aria-hidden="true"></i></button>
     </header>
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="quote">Watch out for that first step, its a doozy!</p>
+        <p class="source">Needlenose Ned<span class="citation">Groundhog Day</span><span class="year">1993</span></p>
+        <br>
+      </div>
+      <div id="image-box">
+        <img id="image" src="images/ned.jpg" alt="needlenose ned"/>
       </div>
     </div>
+    
     <script src="js/quotes.js"></script>
+    <script src="js/colors.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
